// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when providing all fields: errors 1`] = `Array []`;

exports[`should match snapshot when providing all fields: output 1`] = `
ContributorEntity {
  "avatarUrl": "https://avatars.githubusercontent.com/u/20110076?v=4",
  "id": "github/20110076",
  "repositories": Array [],
  "username": "ZibanPirate",
}
`;

exports[`should match snapshot when providing required fields only: errors 1`] = `Array []`;

exports[`should match snapshot when providing required fields only: output 1`] = `
ContributorEntity {
  "avatarUrl": "https://avatars.githubusercontent.com/u/20110076?v=4",
  "id": "github/20110076",
  "username": "ZibanPirate",
}
`;

exports[`should show an error that matches snapshot when passing empty object: errors 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "id must be a string",
    },
    "property": "id",
    "target": ContributorEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "username must be a string",
    },
    "property": "username",
    "target": ContributorEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isUrl": "avatarUrl must be an URL address",
    },
    "property": "avatarUrl",
    "target": ContributorEntity {},
    "value": undefined,
  },
]
`;

exports[`should show an error that matches snapshot when passing empty object: output 1`] = `ContributorEntity {}`;
